--- a/computational_issues-colab.ipynb
+++ b/computational_issues-colab.ipynb
@@ -29,7 +29,34 @@
     "The above discussion, however, is theoretical. In practice, the actual computational time may follow the overall trend as predicted, but there are also many other factors that have significant impacts on the performance. For example, the physical time used can vary a lot depending on whether the program is compiled into binary code (as C/C++ programs) or interpreted (as Python and Java). Generally speaking, interpreted programming languages such as Python are less efficient in terms of the actual running time because the code must be interpreted line by line. It should be noted that Python or Java is not the interpreted language in its original meaning where the interpreter literally goes through line by line for every time it runs the program. Instead, they often use an immediate representation of the code that is compiled in binary that runs faster. Still, interpreted languages are still generally slower than compiled languages such as C/C++. The difference may not be noticeable for small data (and probably we don't really care), but the difference will be big when we deal with large data sets. \n",
     "\n",
     "Aside from the programming language, how the algorithms are actually implemented will be a factor too. For example, the use of recursive functions, as convenient as it is, slows down the algorithm because of the repeated recursive function calls. \n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linux, Max, or Colab\n",
+    "!uname -a\n",
+    "!lscpu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Windows\n",
+    "!wmic cpu get caption, deviceid, name, numberofcores, maxclockspeed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. Performance of query using k-D trees and point quadtrees\n",
     "\n",
     "Here, we put our algorithms of k-D trees and point quadtrees into a test. We will simply compare the performance of using these trees, and we also compare them with the linear (brute-force) search approach. We test the performance by systematically controlling the size of the data and see how they catch up. The following are the packages that we will use."
@@ -150,7 +177,7 @@
    "source": [
     "The above quick test clearly shows the efficiency of using the indexing method for query. It also shows that building the tree may need some significant amount of time. \n",
     "\n",
-    "Now we give it a more systematical test. More specifically, we use different numbers of points, ranging from 100,000 to **1,000,000**, with a step of 100,000. All the experiments were done on Now we give it a more systematical test. More specifically, we use different numbers of points, ranging from 100,000 to **1,000,000**, with a step of 100,000. All the experiments were done on an Intel Next Computing Unit (NUC) 10  with Intel Core i7-10710U CPU 1.10GHz and 16 GB RAM, running the iPython notebook (which can be slower than a regular Python interpreter) on Ubuntu Linux 20.04 LTS. The performance will be different if it is done using another hardware or software environment (such as Colab). "
+    "Now we give it a more systematical test. More specifically, we use different numbers of points, ranging from 100,000 to **1,000,000**, with a step of 100,000. All the experiments were done on Now we give it a more systematical test. More specifically, we use different numbers of points, ranging from 100,000 to **1,000,000**, with a step of 100,000. "
    ]
   },
   {
@@ -196,7 +223,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a way of comparison, the following shows previous results a Surface Pro 6 with 2.11 GHz Intel Core i7and 8 GB RAM, using the Jupyter iPython notebook:\n",
+    "As a way of comparison, the following shows previous results on different platforms.\n",
+    "\n",
+    "Intel Next Computing Unit 10 (released in 2020) with Intel Core i7-10710U CPU 1.10GHz and 16 GB RAM, running the iPython notebook on Ubuntu Linux 20.04 LTS:\n",
+    "\n",
+    "```\n",
+    " 100000 |  1.920  0.828  2.066 |  0.005  0.003  0.004 |  2.368\n",
+    " 200000 |  4.247  1.914  3.836 |  0.005  0.003  0.003 |  5.215\n",
+    " 300000 |  6.216  3.260  6.228 |  0.005  0.003  0.004 |  8.613\n",
+    " 400000 |  8.719  4.391  9.310 |  0.006  0.003  0.004 | 12.813\n",
+    " 500000 | 11.204  5.569 11.880 |  0.005  0.003  0.004 | 14.315\n",
+    " 600000 | 14.169  6.801 14.790 |  0.005  0.003  0.004 | 18.673\n",
+    " 700000 | 16.430  8.005 17.451 |  0.006  0.003  0.004 | 19.009\n",
+    " 800000 | 19.018  9.822 18.863 |  0.006  0.003  0.004 | 24.452\n",
+    " 900000 | 22.156 11.036 23.006 |  0.006  0.003  0.004 | 26.543\n",
+    "1000000 | 24.699 12.680 24.078 |  0.006  0.003  0.004 | 28.464\n",
+    "```\n",
+    "\n",
+    "Surface Pro 6 with 2.11 GHz Intel Core i7and 8 GB RAM, using the Jupyter iPython notebook on Windows 10:\n",
     "\n",
     "```\n",
     " 100000 |  2.594  1.091  2.524 |  0.000  0.000  0.016 |  3.250\n",
@@ -212,7 +256,7 @@
     "```\n",
     "\n",
     "\n",
-    "Another set of results on a Mid 2014 MacBook Pro with 2.6 GHz Intel Core i5 and 8 GB RAM, using the iPython notebook (which can be slower than a regular Python interpreter). \n",
+    "Mid 2014 MacBook Pro with 2.6 GHz Intel Core i5 and 8 GB RAM:\n",
     "\n",
     "```\n",
     " 100000 |  3.508  1.600  4.014 |  0.008  0.004  0.005 |  3.660\n",
@@ -248,9 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = [ alltime[i][0]/1000 for i in range(len(alltime))]\n",
@@ -274,9 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.plot(x, [ alltime[i][7] for i in range(len(alltime))], label='linear')\n",
@@ -694,9 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "results_nn = []\n",
@@ -808,7 +846,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -822,9 +860,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
