--- a/projections1-colab.ipynb
+++ b/projections1-colab.ipynb
@@ -8,7 +8,7 @@
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
     "\n",
-    "# Map Projections (Halloween Edition 2021)\n",
+    "# Map Projections (Halloween Edition)\n",
     "\n",
     "<img width=555px src=\"figures/halloween-hall-of-fame.png\"/>\n",
     "\n",
@@ -920,7 +920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
