--- a/point-in-polygon-3.ipynb
+++ b/point-in-polygon-3.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "pts = [p1, p2, p3, p4, p5, p6]\n",
     "\n",
-    "results = [in_or_out(pip_cross(p, polygon1)[0]) for p in pts]\n",
+    "results = [in_or_out(pip_cross(p, polygon1)[0]) for p in pts] # do this without using in_or_out?\n",
     "\n",
     "colors = [['red', 'blue'][i] for i in results]\n",
     "\n",
