update add_patch, typos

--- a/projections1-colab.ipynb
+++ b/projections1-colab.ipynb
@@ -44,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "raw_points=[]\n",
@@ -60,14 +62,24 @@
     "\n",
     "# TODO:\n",
     "#     use the same logic to get the points on the meridians\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We make sure to keep the number of lines on the graticule because we will render them differently than other lines."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "numgraticule = linenum"
    ]
   },
@@ -81,7 +93,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "raw_points[-2], raw_points[-1]"
@@ -97,7 +111,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "numgraticule"
@@ -115,7 +131,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import urllib.request as request\n",
@@ -136,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "url = 'https://raw.githubusercontent.com/gisalgs/data/master/ne_110m_coastline.geojson'\n",
@@ -154,7 +174,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "coastline_obj.keys()"
@@ -170,7 +192,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "len(coastline_obj['features'])"
@@ -186,7 +210,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "f = coastline_obj['features'][0]\n",
@@ -203,7 +229,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "for f in coastline_obj['features']:\n",
@@ -225,7 +253,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "print(len(raw_points), numgraticule, linenum)\n",
@@ -247,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def plot_world(ax, points, numgraticule, numline, color=None):\n",
@@ -273,7 +305,7 @@
     "                col = color\n",
     "        pts = [[p[1], p[2]] for p in points if p[0]==i]\n",
     "        l = plt.Polygon(pts, color=col, fill=False, closed=False)\n",
-    "        ax.add_line(l)\n",
+    "        ax.add_patch(l)\n",
     "\n",
     "    ax.axis('equal')                       # x and y one the same scale\n",
     "    ax.axes.get_xaxis().set_visible(False)  # don't show axis\n",
@@ -291,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -301,7 +335,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "_, ax = plt.subplots(1, 1)\n",
@@ -332,7 +368,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "!rm geom -rf\n",
@@ -349,7 +387,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from geom.worldmap import *"
@@ -358,7 +398,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "url = 'https://raw.githubusercontent.com/gisalgs/data/master/ne_110m_coastline.geojson'\n",
@@ -379,7 +421,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from geom.plot_worldmap import *"
@@ -388,7 +432,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "_, ax = plt.subplots(1, 1)\n",
@@ -415,7 +461,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from math import cos, radians, pi\n",
@@ -449,7 +497,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from geom.transforms import transform_equirectangular\n",
@@ -467,7 +517,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -489,7 +540,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "_, ax = plt.subplots(1, 1)\n",
@@ -507,15 +560,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TODO:\n",
     "#   Project the world map using the transform_equirectangular function where lat0 is set to 60.\n",
     "#   code here:\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -566,7 +618,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from geom.transforms import transform_sinusoidal\n",
@@ -577,7 +631,6 @@
     "#   Use function transform_sinusoidal to project all points in raw_points\n",
     "#   Append the projected points and their line ID's to list point\n",
     "#   code here:\n",
-    "\n",
     "\n"
    ]
   },
@@ -592,7 +645,7 @@
    "source": [
     "# TODO:\n",
     "#    Draw world map in Sinusoidal projection\n",
-    "#    code ehre\n",
+    "#    code here\n",
     "\n"
    ]
   },
@@ -611,7 +664,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -645,7 +699,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "url = 'https://raw.githubusercontent.com/gisalgs/data/master/tissot.geojson'\n",
@@ -664,7 +720,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -681,7 +738,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "tissots_raw_points = []\n",
@@ -711,7 +770,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "_, ax = plt.subplots(1, 1)\n",
@@ -721,7 +782,7 @@
     "    col = '#fa5a5a'\n",
     "    pts = [[p[1], p[2]] for p in tissots_points if p[0]==i]\n",
     "    l = plt.Polygon(pts, color=col, fill=False, closed=False)\n",
-    "    ax.add_line(l)\n",
+    "    ax.add_patch(l)\n",
     "    \n",
     "plt.show()"
    ]
@@ -736,7 +797,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from geom.point import *\n",
@@ -746,7 +809,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "areas = []\n",
@@ -783,7 +848,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def transformx(lon, lat):\n",
@@ -795,14 +862,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TODO\n",
     "#   show the world map using the projection implemented in function transformx\n",
-    "#   code ehre:\n",
-    "\n",
-    "\n",
+    "#   code here:\n",
     "\n"
    ]
   },
@@ -816,19 +883,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TODO\n",
     "#    change (redefine) the transformx function below so that the meridians converge to both poles\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TODO\n",
@@ -839,13 +909,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "    \n",
     "# TODO\n",
     "#    Draw the world map using newly projected points\n",
-    "\n",
     "\n"
    ]
   },
@@ -859,7 +929,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "_, ax = plt.subplots(1, 1)\n",
@@ -877,7 +949,7 @@
     "    col = '#fa5a5a'\n",
     "    pts = [[p[1], p[2]] for p in tissots_points if p[0]==i]\n",
     "    l = plt.Polygon(pts, color=col, fill=False, closed=False)\n",
-    "    ax.add_line(l)\n",
+    "    ax.add_patch(l)\n",
     "    \n",
     "plt.show()"
    ]
@@ -892,14 +964,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TODO:\n",
     "#   Calculate the areas of the circles projected using the new transformx function\n",
     "#   Code here\n",
-    "\n",
-    "\n",
     "\n"
    ]
   }
@@ -920,7 +992,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
