--- a/indexing-colab.ipynb
+++ b/indexing-colab.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to improve the \"user experience\" when we conduct the experiments, we want to have a nice way of showing the progress: it can be stressful to test a million iterations without knowing where we are and how long we have to wait. We do this with a progress bar. There are many ways to make a progress bar in Python interactive environment (including this one) and some of them can be found at [this stackoverflow page](https://stackoverflow.com/questions/3160699/python-progress-bar). But we only need a very simple one without having to involve too complicated techniques. We use a special character `'\\r'` that forces the cursor to move to the beginning of each line when we use the `print` function. We replace the end character by this so instead of breaking to a new line, the cursor will move back to the beginning. We will need to make sure the next string to print is at least as long as the previous one. Otherwise, part of the previous print will remain on screen because it is not covered by the new one. Sometimes we can add some spaces at the end to make sure nothing noticeable is shown."
+    "In order to improve the \"user experience\" when we conduct the experiments, we want to have a nice way of showing the progress: it can be stressful to test a million iterations without knowing where we are and how long we have to wait. We do this with a progress bar. There are many ways to make a progress bar in Python interactive environment (including this one) and some of them can be found at [this stackoverflow page](https://stackoverflow.com/questions/3160699/python-progress-bar). But we only need a very simple one without having to involve too complicated techniques. We use a special character `'\\r'` that forces the cursor to move to the beginning of each line (so called carriage return) when we use the `print` function. [This github page](https://github.com/googlecolab/colabtools/issues/166) suggests using the carriage return at the beginning of the string instead of in the end character. We will need to make sure the next string to print is at least as long as the previous one. Otherwise, part of the previous print will remain on screen because it is not covered by the new one. Sometimes we can add some spaces at the end to make sure nothing noticeable is shown."
    ]
   },
   {
@@ -104,7 +104,7 @@
    "source": [
     "for i in range(15):\n",
     "    barx = int(20*(i+1)/15) # bar is 20 char length\n",
-    "    print('[{}{}] {}/{}'.format('x'*barx, '-'*(20-barx), i+1, 15), end='\\r', flush=True)\n",
+    "    print('\\r[{}{}] {}/{}'.format('x'*barx, '-'*(20-barx), i+1, 15), end='', flush=True)\n",
     "    time.sleep(0.1)\n"
    ]
   },
@@ -130,7 +130,7 @@
     "    we assume the lower end is zero.\n",
     "    '''\n",
     "    barx = int(size*(current+1)/upper)\n",
-    "    print('[{}{}] {}/{}'.format('x'*barx, '-'*(size-barx), current+1, upper), end='\\r', flush=True)"
+    "    print('\\r[{}{}] {}/{}'.format('x'*barx, '-'*(size-barx), current+1, upper), end='', flush=True)"
    ]
   },
   {
@@ -851,7 +851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
