--- a/point-in-polygon-3.ipynb
+++ b/point-in-polygon-3.ipynb
@@ -28,7 +28,40 @@
     "\n",
     "In this tutorial, we are not going to discuss the details of calculating intersection of two line segments. Please refer to sections 2.5 and 2.6 in the *GIS Algorithms* book for those details. \n",
     "\n",
-    "The even-odd algorithm for determining if a point is in a polygon is implemented as function `pip_cross` in [point_in_polygon.py](https://github.com/gisalgs/geom/blob/master/point_in_polygon.py). This code was adopted from the C program in Graphics Gems IV by Haines (1994). The code will raise an error if the polygon is not closed. \n"
+    "The even-odd algorithm for determining if a point is in a polygon is implemented as function `pip_cross` in [point_in_polygon.py](https://github.com/gisalgs/geom/blob/master/point_in_polygon.py). This code was adopted from the C program in Graphics Gems IV by Haines (1994). The code will raise an error if the polygon is not closed. \n",
+    "\n",
+    "To fully understand the code, we should try one of the half-lines and see whether the function returns the right result. Let's try the half-line **a**. We also assume the right-most point is the first point of the polygon and the sequence of points goes counterclockwise. We are going to check the algorithm for each line segment. The order the line segments are marked in the following figure.\n",
+    "\n",
+    "<img width=350px src=\"figures/pip-1x.jpeg\"/>\n",
+    "\n",
+    "Below, the first number in each line refers to the line segment. When we refer to the line numbers of the `pip_cross` function, the numbers are shown in [the github Python file](https://github.com/gisalgs/geom/blob/master/point_in_polygon.py).\n",
+    "\n",
+    "1 - yside1 = True, yside2 = True. Condition on line 65 is False. Next point.  \n",
+    "2 - yside1 = True, yside2 = True.  \n",
+    "3 - yside1 = True, yside2 = True.  \n",
+    "4 - yside1 = True, yside2 = True.  \n",
+    "5 - yside1 = True, yside2 = False, xside1 = xside2 = True. Condition on line 65 is True, line 66 is True, line 67 is True. cross_count = 1, is_point_inside = True  \n",
+    "6 - similar 5. cross_count = 2, is_point_inside = False  \n",
+    "7 - similar 6. cross_count = 3, is_point_inside = True    \n",
+    "8 - similar 7. cross_count = 4, is_point_inside = False  \n",
+    "9 - similar 8. cross_count = 5, is_point_inside = True    \n",
+    "10 - similar 9. cross_count = 6, is_point_inside = False  \n",
+    "11 - similar 10. cross_count = 7, is_point_inside = True    \n",
+    "12 - similar 11. cross_count = 8, is_point_inside = False\n",
+    "\n",
+    "So the final result is `(False, 8)`, meaning there are 8 intersections and the point forming the half line a is not in the polygon.\n",
+    "\n",
+    "If we consider half-line **b**, here is what we have:\n",
+    "\n",
+    "1 - yside1 = yside2 = True. Condition on line 65 is False. Next.  \n",
+    "2...7 - Next  \n",
+    "8 - yside1 = False, yside2 = True, xside1 = False, xside2 = True. Condition on line 65 is True, on line 70 is True. Calculate m and we have m > x because intersection is on the right side of the point. line 76 is True. cross_count = 1, is_point_inside = True  \n",
+    "9 - yside1 = False, yside2 = True, xside1 = True, xside2 = True. Condition on line 65 is True, on line 66 is True, cross_count = 2, is_point_inside = False  \n",
+    "10 - similar to 9. cross_count = 3, is_point_inside = True  \n",
+    "11 - similar to 10. cross_count = 4, is_point_inside = False  \n",
+    "12 - similar to 11. cross_count = 5, is_point_inside = True  \n",
+    "\n",
+    "This time it is a little more subtle because the half-line \"crosses\" 5 line segments even though it only touches one of the end points, and some of the end points are double counted. So we should know that the count may not make sense, but the detection of whether the point is in or not should always be right. Of course we decide that a point on the boundary will be considered as in the polygon, which may not be desired in some cases."
    ]
   },
   {
@@ -323,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
