more equal-area updates

--- a/projections1-colab-2.ipynb
+++ b/projections1-colab-2.ipynb
@@ -1063,7 +1063,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, create the same quadrilateral in longitudes and latitudes and then transform the points using the sinusoidal projection. The `transform_sinusoidal` assume the radius of the earth is 1 and we will scale it to the actual radius by multiplying the transformed coordinates with the length of each degree. We are going to use kilometers as our unit."
+    "Now, we create the same quadrilateral in longitudes and latitudes and then transform the points using the sinusoidal projection. The `transform_sinusoidal` assume the radius of the earth is 1. So we will find a way to make sure we get the \"real-world\" coordinates. Recall the equations for the sinusoidal project:\n",
+    "\n",
+    "$x = \\lambda \\cos(\\varphi_0)$  \n",
+    "$y = \\varphi$\n",
+    "\n",
+    "The value (as in the number) of the Y coordinate from this formula is as same as the latitude. Let's assume the earth is a perfect sphere with a radius or R. When we imagine the earth is flattened into a flat 2-dimensional space, the upper bound of the Y coordinate should be a half of the meridian, or a quarter of the equator. The circumference of the earth is $2 \\pi R$, and therefore when the latitude $\\varphi$ is 90, Y should be $\\frac{1}{2} \\pi R$. If latitude is measured in radians, then the north pole is $\\frac{1}{2} \\pi$ and its latitude, after transformed, is exactly $\\frac{1}{2} \\pi R$, which means if we multiply the earth radius with $\\varphi$ (again, measured in radians). The same thing can be said for the longitude. So by simply scaling both the X and Y coordinates in the formula with the earth radius, we will get X and Y in \"real-world\" measures instead of just a generic number:\n",
+    "\n",
+    "$x = R \\lambda \\cos(\\varphi_0)$  \n",
+    "$y = R \\varphi$\n",
+    "\n",
+    "If the longitude and latitude are measured in degrees, then we will simply figure out the length of each degree on a great circle (such as the equator) and multiply that with the degree. Below we calculate the length of a degree in kilometer, but we can easy use the statute miles if needed. "
    ]
   },
   {
@@ -1086,7 +1096,7 @@
    "source": [
     "We should note that **111** is a number worth memorizing: it is the length of a degree in kilometer on the equator or any meridian. But the length of a degree longitude decreases from 111 to 0 when we go from the equator to the poles.\n",
     "\n",
-    "Now we get the quadrilateral and calculate the size:"
+    "Now we get the quadrilateral and calculate the size. We calculate the size using our `centroid` function that computes the area of a closed polygon. It should be noted that the `transform_sinusoidal` doesn't consider the earth radius, nor the unit (radians or degree) of the coordinates. So it is our job to make sure we know the units and how to scale the coordinates. Below is an example of scaling the coordinates into kilometers. "
    ]
   },
   {
@@ -1108,7 +1118,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We not this size is slightly smaller than what we got above using the math. This is because we treat the meridians as straight lines instead of curves. If we add one more point on the meridian (`[0, 5]` and `[-10, 5]`), we are going to get a number that is closer:"
+    "We note this size is slightly smaller than what we got above using the math. In practice, if this is all the points we get, we will accept the result and acknowledge that the result may have problems because lines with certain curvature may have been generalized to straight lines. \n",
+    "\n",
+    "However, let's push the envelope a little further here to develop some deep understanding of the nuances of spatial data -- let's call this the hardcore of spatial data science! \n",
+    "\n",
+    "The slight difference we observed above is due to the fact that we treat the meridians as straight lines instead of curves. If we add one more point on each of the two meridians (`[0, 5]` and `[-10, 5]`), we are going to get a number that is closer to the true size:"
    ]
   },
   {
@@ -1130,7 +1144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we continuously add more points, we will get closer to the true curve and the area should be closer to what we got using the formula. To do this, we write a function to help us get a quadrilateral with the precision (increment of degree on the sides) we want:"
+    "If we continuously add more points, we will get closer and closer to the true curve and the area should be closer and closer to what we got using the formula (the true area if we assume a perfect sphere). To do this, we write a function to help us get a quadrilateral with the precision (increment of degree on the sides) we want:"
    ]
   },
   {
