more equal-area updates

--- a/projections1-colab-2.ipynb
+++ b/projections1-colab-2.ipynb
@@ -45,15 +45,9 @@
     "\n",
     "### Getting the graticule\n",
     "\n",
-    "The following code creates a geojson file for the graticule. This is included here just for our references. This file is also uploaded to the github at [here](https://github.com/gisalgs/data/blob/master/graticule.geojson) and we will use the online file instead of the local in this tutorial."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "The following code creates a geojson file for the graticule. This is included here just for our references and the code cannot run as a code cell in this notebook. The file generated this way is also uploaded to the github at [here](https://github.com/gisalgs/data/blob/master/graticule.geojson) and we will use the online file instead of the local in this tutorial.\n",
+    "\n",
+    "```python\n",
     "# make a dataset in geojson for the graticule\n",
     "\n",
     "linenum = 0\n",
@@ -96,7 +90,8 @@
     "\n",
     "import json\n",
     "with open('graticule.geojson', 'w') as f:\n",
-    "    json.dump(graticule, f)"
+    "    json.dump(graticule, f)\n",
+    "```\n"
    ]
   },
   {
