--- a/projections2-colab-2.ipynb
+++ b/projections2-colab-2.ipynb
@@ -25,7 +25,7 @@
     "- On each parallel, the meridians are equally spaced. \n",
     "- The origin of the coordinate system in the Robinson projection is at the intersection between the equator and the central meridian. \n",
     "\n",
-    "Different from other projections, the Robinson projection relies on the following look-up table for transformation. \n",
+    "Different from other projections, the properties listed above cannot be guaranteed mathematically by a set of formlas. Instead, the Robinson projection relies on the following look-up table for transformation. \n",
     "\n",
     "| Latitude ($\\varphi$) | Length (A) | Distance to equator (B) |\n",
     "|:--------------------:|:----------:|:-----------------------:|\n",
@@ -37,7 +37,7 @@
     "|25 | 0.9730 | 0.3100|\n",
     "|30 | 0.9600 | 0.3720|\n",
     "|35 | 0.9427 | 0.4340|\n",
-    "|40 | 0.9216 | 0.4958|\n",
+    "|40 | 0.9216 | **0.4958**|\n",
     "|45 | 0.8962 | 0.5571|\n",
     "|50 | 0.8679 | 0.6176|\n",
     "|55 | 0.8350 | 0.6769|\n",
@@ -56,7 +56,7 @@
     "- The distance from the pole to equator is 1.0000 as indicated in the table. But from the above we know Robinson wanted the central meridian to be 0.5072 of the length of equator. We will use this table to get the distance of each parallel to equator, but at the end of transformation, we will need to adjust the total length by linear scaling.\n",
     "- Only the central median is a straight line and all other meridians are curved. We will get the distance of each parallel to equator first and then adjust them so that we can control the length of the meridians (by controlling the length of the central meridian).\n",
     "\n",
-    "For each of the 19 latitudes ranging from 0 to 90 with an interval of 5 degrees (see the table below), Robinson gave the length of each parallel and the map distance from the parallel to the equator. But for any other latitude, we will have to interpolate the length (A) and distance to equator (B). \n",
+    "For each of the 19 latitudes ranging from 0 to 90 with an interval of 5 degrees (see the table below), Robinson gave the length of each parallel and the map distance from the parallel to the equator. But for any other latitude, we will have to **interpolate** the length (A) and distance to equator (B). \n",
     "\n",
     "Even more interesting and perhaps mysterious, Robinson did not specify which interpolation method was used in his original work. He took an artistic approach to this (see the quote at the beginning of this lecture note). It was suggested by Richardson (1989) that Robinson used Aitken's method in his original work. Aitken's method is now considered to be obsolete and a commonly used method today is called [**Neville's algorithm**](https://en.wikipedia.org/wiki/Neville%27s_algorithm). We will not get to the details of the algorithm, which can be found in the textbook (GIS Algorithms, pp. 35-36). Instead, we will discuss how the code works. We have a main module from the github repo involved here: [transform1.py](https://github.com/gisalgs/geom/blob/master/transform1.py), which imports another module called [neville.py](https://github.com/gisalgs/geom/blob/master/neville.py). We will only need to import the first module (transform1, admittedly the module name can be much improved!) in our own code."
    ]
@@ -94,7 +94,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "latitudes, A, B"
+    "print(latitudes)\n",
+    "print(A)\n",
+    "print(B)"
    ]
   },
   {
@@ -199,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clearly this is not correct because value at latitude is 0.6213, and the value at 80.5 should be smaller than that, but we got a value that is even greater than that at 80. We should use the proper range:"
+    "Clearly this is not correct because value at latitude 80 is 0.6213, and the value at 80.5 should be smaller than that, but we got a value that is even greater than that at 80. We should use the proper range:"
    ]
   },
   {
@@ -220,13 +222,9 @@
    "outputs": [],
    "source": [
     "# TODO\n",
-    "#   What will be the estimate of the distance to equitor \n",
+    "#   What will be the estimate of the distance to equator \n",
     "#   from latitude 33.123 using 3 known values from each side?\n",
     "#   Code here:\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -279,11 +277,10 @@
     "#   Code here:\n",
     "\n",
     "\n",
+    "import urllib.request as request\n",
+    "import json \n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "from geom.plot_worldmap import *\n",
     "\n"
    ]
   },
@@ -311,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
